force-app/main/default/objects/Persona__c/Persona__c.object-meta.xml
<CustomObject>
    <description>Used for Persona content in the Ask Astro floating head component</description>
    <label>Persona</label>
    <nameField>
        <label>Persona Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>