force-app/main/default/objects/Persona__c/fields/Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Background_Color__c</fullName>
    <defaultValue>&quot;#00A1E1&quot;</defaultValue>
    <label>Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>