force-app/main/default/objects/Persona__c/fields/Background_Image__c.field-meta.xml
<CustomField>
    <fullName>Background_Image__c</fullName>
    <defaultValue>&quot;widgetBG-min.png&quot;</defaultValue>
    <inlineHelpText>This is an image in the AskAstroResources static resource. AskAstroResources is a zip file of images. Put an image in this zip file and update file for the AskAstroResources static resources. Use the name of your image (e.g. background.png) for this field. When used in the AstroPersona component, the background will be loaded from &quot;AskAstroResources/background.png&quot;.</inlineHelpText>
    <label>Background Image</label>
    <length>100</length>
    <type>Text</type>
</CustomField>