force-app/main/default/objects/Persona__c/fields/Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_API_Name__c</fullName>
    <defaultValue>&quot;Ask_Astro_Persona&quot;</defaultValue>
    <label>Flow API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>