force-app/main/default/objects/Persona__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <defaultValue>&apos;Lauren Bailey&apos;</defaultValue>
    <inlineHelpText>Name used in the details pop-up from the Astro floating head. e.g. the name of a person &quot;Lauren Bailey&quot;. Used by the default Flow &apos;Ask_Astro_Persona&apos;.</inlineHelpText>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>