force-app/main/default/objects/Persona__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <defaultValue>620</defaultValue>
    <inlineHelpText>Height of the pop-up window</inlineHelpText>
    <label>Height</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>