force-app/main/default/objects/Persona__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <defaultValue>&apos;laurenbailey&apos;</defaultValue>
    <inlineHelpText>Name of the static resource for the image used in the Astro floating head</inlineHelpText>
    <label>Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>