force-app/main/default/objects/Persona__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <inlineHelpText>The Persona Role. Might be the same as the Persona Name such as: &quot;Partner&quot;, &quot;Customer&quot;; or a title: &quot;Sales Executive&quot;, &quot;Operations Manager&quot;. Used by the default Flow &apos;Ask_Astro_Persona&apos;.</inlineHelpText>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>