force-app/main/default/objects/Persona__c/fields/Where_Are_We__c.field-meta.xml
<CustomField>
    <fullName>Where_Are_We__c</fullName>
    <label>Where Are We?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>