force-app/main/default/objects/Persona__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <inlineHelpText>Width of the pop-up window</inlineHelpText>
    <label>Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>