force-app/main/default/objects/Persona__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Role__c</columns>
    <columns>Image__c</columns>
    <columns>Flow_API_Name__c</columns>
    <columns>Where_Are_We__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>